[package]
name = "iiko-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
reqwest = { version = "0.12.20", default-features = false, features = ["rustls-tls"] }
reqwest-middleware = { version = "0.4.2", features = ["rustls-tls"]}
reqwest-retry = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
teloxide = { version = "0.15.0", default-features = false, features = ["rustls", "macros", "ctrlc_handler"] }
tokio = { version = "1.45.1", features = ["full"] } 
toml = "0.8.23"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
